kubernetes/back-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-deployment
  labels:
    app: back-end
spec:
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
      - name: back-end
        image: chemuske013/back-end
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  selector:
    app: back-end
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
