kubernetes/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
  labels:
    app: front-end
spec:
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: chemuske013/front-end
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
